# esgaliant-an

./: .gitignore  README.md  flake.nix  main.nf  nextflow.config  sbatch_esgaliant.sh
.nextflow/: history
configs/: base.config  run.config  smoke.config
containers/base_cell/: Dockerfile  base_cell.def  pyproject.toml
containers/testing/: Dockerfile  pyproject.toml  test.def  testing.def
lib/: utils.nf
logs/: report.html  timeline.html  trace.txt
workflows/: base_cell.nf  build_containers.nf
