[project]
name = "base-cell"
version = "0.1.0"
description = "Base cell computation using cellxgene census"
readme = "README.md"
authors = [
    {name = "Patrick C.N. Martin", email = "patrick.martin@cshs.org"}
]
requires-python = ">=3.11"
dependencies = [
    "cellxgene-census>=1.0.0",
    "numpy>=2.1.3",
    "tiledbsoma>=1.0.0",
    "zarr>=3.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

